# most-dashboard

./: .gitignore  Dockerfile  Note.txt  dashboard.ps1  docker-compose.yml  install.ps1  readme.md
R/: Book2.xlsx  electric_GM_20_11_2024.R  execute.sh  optimized.R  optimized_v2.R  original.R  rewritten_script.R  summary_results_grid.csv
fastapi-backend/: .~lock.data.xlsx#  Database_Electric Aircraft_Scenario_2.xlsx  Dockerfile  air_passenger_monthly_2035.xlsx  air_passenger_yearly_2035.xlsx  droni.xlsx  evolution_freight.xlsx  evolution_passenger.xlsx  freight_monthly_data 2035.xlsx  freight_yearly 2035.xlsx  pyproject.toml  scenario1.xlsx  scenario2.xlsx  scenario3.xlsx  socioeconomic.csv
fastapi-backend/app/: main.py  service.py
fastapi-backend/app/routers/: demand_router.py  drone_router.py  electric_router.py  emissions_router.py  socioeconomic_router.py
most-desktop/: package-lock.json  package.json
most-desktop/src/: App.tsx  index.css
most-desktop/src-tauri/: Cargo.toml  tauri.conf.json
most-desktop/src-tauri/src/: main.rs
most-desktop/src/components/: KpiTable.tsx  Navbar.tsx  Perimetro.tsx  map.tsx
react-dash/: index.html  package-lock.json  package.json  wrangler.jsonc
react-dash/src/: App.tsx  i18n.js  index.css
react-dash/src/components/: BiometricDisplaySelector.tsx  BiometricGraph.tsx  BiometricIdentitySelector.tsx  DemandGraph.tsx  DisplaySelector.tsx  DroneDisplaySelector.tsx  DroneKpiGraph.tsx  DroneKpiTable.tsx  DroneMap.tsx  ElectricMap.tsx  EmissionsDialog.tsx  EmissionsMap.tsx  (+17 more)
streamlit-dash/: Dockerfile  main.py  pyproject.toml
(+15 files in other folders)
