[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "fastexcel>=0.14.0",
    "numpy>=2.2.6",
    "polars>=1.33.0",
    "uvicorn>=0.35.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "pylint>=3.3.8",
]
