[project]
name = "streamlit-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.20.0",
    "openpyxl>=3.1.5",
    "polars>=1.32.3",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
    "streamlit-folium>=0.25.1",
]
